# DIP_C

./: README.md
DIP01/: CMakeLists.txt  CMakeSettings.json  DIP01.cpp  utils.cpp  utils.h  utilsv2.cpp
DIP01/images/: letterT.tif  urban100_87.tif
DIP02/: CMakeLists.txt  DIP02.cpp  utils.cpp  utils.h
DIP02/images/: astronaut.tif
DIP03/: CMakeLists.txt  DIP03.cpp  tool_dft.cpp  utils.cpp  utils.h
DIP04/: DIP04.cpp  utils.cpp  utils.h
DIP04/images/: Tmp.tif  blur.tif  blursp.tif  boy.tif  noise 7.tif  noise.tif  notchc.tif  text.tif
DIP05/: CMakeSettings.json  DIP05.cpp  utils.cpp  utils.h
DIP05/images/: iris.tif
DIP06/: CMakeLists.txt  DIP06.cpp  tool_freq_domain_filter.cpp  tool_image_compress.cpp  tool_spat_domain_filter.cpp  tool_spatial_transform.cpp  utils.h  wavelet.cpp
